# slurm-assist

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
hpc-templates/: README.md
hpc-templates/many-independent-cpu-runs/: README.md  _merge_results.sh  _run.sh  input_data.pkl  merge_results.py  pull_from_remote.sh  push_to_remote.sh  results.pkl  submit.sh  tutorial.ipynb
hpc-templates/many-independent-jobs/: tutorial.ipynb
hpc-templates/many-independent-jobs/hpc/: _merge_results.sh  _run.sh  config.sh  merge_results.py  pull_from_remote.sh  push_to_remote.sh  run.py  split_data.py  submit.sh
hpc-templates/many-independent-jobs/hpc/run_1/: config.sh  results.pkl  run_single.py
hpc-templates/many-small-independent-jobs/: .hpc-ignore  README.md  tutorial.ipynb
hpc-templates/many-small-independent-jobs/hpc/: .hpc-ignore-tmp  _run.sh  import_path_based_results_file.py  merge_results.sh  pull_from_remote.sh  push_to_remote.sh  submit.sh
hpc-templates/many-small-independent-jobs/hpc/run_1/: hpc_config.sh
hpc-templates/many_independent_cpu_runs/: _merge_results.sh  _run.sh  pull_from_remote.sh  push_to_remote.sh  run.py  submit.sh
hpc-templates/small-gpu-job/: README.md
hpc-templates/small-gpu-job/example_module/: hello_world.py
hpc-templates/small-gpu-job/hpc/: _run.sh  parse_args.py  push_to_remote.sh  submit.sh
hpc-templates/small-gpu-job/hpc/run_1/: hpc_config.sh
src/hpc_templates/: __init__.py  file1.yaml  file2.yaml  main.py
src/hpc_templates/many_small_jobs/: merge_results.py  split_data.py  utils.py
src/hpc_templates/serial-gpu-jobs/hpc/: hpc_config_global.sh
src/hpc_templates/serial-gpu-jobs/hpc/run_1/: hpc_config.sh
src/slurm_assist/: __init__.py  job.py  utils.py
src/slurm_assist/embarrassingly_parallel/: merge.py  run.py  split.py  split_data.py  top_level_interface.py
src/slurm_assist/many_small_jobs/: main  main.sh  merge  merge.py  merge.sh  merge_results.py  run.py  top_level_interface.py  utils.py
src/slurm_assist/many_small_jobs_pyslurm/: README.md  merge.py  parse_image_from_args.py  split_data.py  top_level_interface.py  utils.py
src/slurm_assist/move/: ssh_move.py  top_level_interface.py
src/slurm_assist/serial/: top_level_interface.py
src/slurm_assist/serial-gpu-jobs/: .hpc-ignore  README.md
src/slurm_assist/serial-gpu-jobs/hpc/: _do_all_config.sh  _run.sh  get_files_to_push.py  jax-cuda.def
src/slurm_assist/single/: top_level_interface.py
templates/long-gpu-job/hpc/: hpc_config_global.sh  jax-cuda.def  pull_from_remote.sh
templates/many-small-independent-jobs/: README.md  tutorial.ipynb
templates/many-small-independent-jobs/example_module/: __init__.py  write_some_results.py
templates/many-small-independent-jobs/hpc/: _do_all_config.sh  _merge_results.sh  _move_results.sh  hpc_config_global.sh  import_path_based_results_file.py  jax-mpi.def  merge_results.py  move_results.sh  parse_args.py  pull_from_remote.sh  push_to_remote.sh  pyproject.toml  run.py  split_data.py  split_files.py  submit.sh
templates/many-small-independent-jobs/hpc/run_1/: data.pkl  hpc_config.sh  run_single.py
templates/serial-gpu-jobs/: README.md
templates/serial-gpu-jobs/example_module/: __init__.py  write_some_results.py
templates/serial-gpu-jobs/hpc/: hpc_config_global.sh  parse_args.py  pull_from_remote.sh  submit.sh
templates/serial-gpu-jobs/hpc/run_1/: hpc_config.sh  run.py  run_args
templates/small-gpu-job/: README.md
templates/small-gpu-job/example_module/: do_jax_stuff.py  write_some_results.py
templates/small-gpu-job/hpc/: push_to_remote.sh
templates/small-gpu-job/hpc/run_1/: run.py
tests/: file.txt  hello-world-job-submission-script  hello-world.py  mpi.def  scratch.ipynb  simple_job_submission_file  single_run.py  slurm-39608929.out  submit-hello-world.sh  submit_hello_world.py  test_many_small_jobs.py  tutorial.ipynb
tests/test_copy_dir_to_remote/: .slurm-assist-ignore  test_copy_dir_to_remote.py
tests/test_embarrassingly_parallel/: config_1.yaml  config_1a.yaml  config_2.yaml  single_run.py  test_submit.py  test_submit_a.py  test_submit_b.py
tests/test_many_small_jobs/: config_1.yaml  config_2.yaml  default_config.yaml  run_1_config.yaml  test_submit.py
tests/test_move/: config_parallel.yaml  config_ssh.yaml  filenames.txt  test_submit.py
tests/test_serial/: config_1.yaml  config_2.yaml  config_3.yaml  config_base.yaml  test_submit.py  test_submit_no_state.py  test_submit_with_state.py
tests/test_single/: config.yaml  data.txt  program.py  test_submit.py
