[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurm_assist"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Wesley Holt", email = "wesleyjholt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyyaml",
  "gitignore_parser",
  "pandas",
  "fabric",
  "mpi"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slurm_assist"]

# [project.scripts]
# mycommand = "slurm_assist.main:main"

[project.optional-dependencies]
mpi = [
  "mpi4py"
]
test = [
  "pandas",
  "mpi4py"
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "sphinx-autodoc-annotation",
  "sphinx-autodoc-annotation",
  "sphinx-autodoc-typehints"
]

[project.urls]
Documentation = "https://github.com/wesleyjholt/slurm-assist/blob/main/README.md"
Source = "https://github.com/wesleyjholt/slurm-assist/"

[tool.hatch.version]
path = "src/slurm_assist/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/slurm_assist tests}"

[tool.coverage.run]
source_pkgs = ["slurm_assist", "tests"]
branch = true
parallel = true
omit = [
  "src/slurm_assist/__about__.py",
]

[tool.coverage.paths]
hpc_templates = ["src/hpc_templates", "*/hpc-templates/src/hpc_templates"]
tests = ["tests", "*/hpc-templates/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
