[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "many-small-independent-jobs"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Wesley Holt", email = "wesleyjholt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["gitignore_parser"]

[project.urls]
Documentation = "https://github.com/Wesley Holt/many-small-independent-jobs#readme"
Issues = "https://github.com/Wesley Holt/many-small-independent-jobs/issues"
Source = "https://github.com/Wesley Holt/many-small-independent-jobs"

[tool.hatch.version]
path = "src/many_small_independent_jobs/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/many_small_independent_jobs tests}"

[tool.coverage.run]
source_pkgs = ["many_small_independent_jobs", "tests"]
branch = true
parallel = true
omit = [
  "src/many_small_independent_jobs/__about__.py",
]

[tool.coverage.paths]
many_small_independent_jobs = ["src/many_small_independent_jobs", "*/many-small-independent-jobs/src/many_small_independent_jobs"]
tests = ["tests", "*/many-small-independent-jobs/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
